--- a/charts/kubezero-istio/charts/istio-discovery/values.yaml
+++ b/charts/kubezero-istio/charts/istio-discovery/values.yaml
@@ -68,7 +68,7 @@ sidecarInjectorWebhook:
   # If enabled, the legacy webhook selection logic will be used. This relies on filtering of webhook
   # requests in Istiod, rather than at the webhook selection level.
   # This is option is intended for migration purposes only and will be removed in Istio 1.10.
-  useLegacySelectors: true
+  useLegacySelectors: false
   # You can use the field called alwaysInjectSelector and neverInjectSelector which will always inject the sidecar or
   # always skip the injection on pods that match that label selector, regardless of the global policy.
   # See https://istio.io/docs/setup/kubernetes/additional-setup/sidecar-injection/#more-control-adding-exceptions
@@ -157,15 +157,13 @@ telemetry:
       enabled: false
       logging: false
       monitoring: false
-      topology: false
+      topology: false # deprecated. setting this to true will have no effect, as this option is no longer supported.
       disableOutbound: false
       #  configOverride parts give you the ability to override the low level configuration params passed to envoy filter.
 
       configOverride: {}
       #  e.g.
-      #  enable_mesh_edges_reporting: true
       #  disable_server_access_logging: false
-      #  meshEdgesReportingDuration: 500s
       #  disable_host_header_fallback: true
     # Access Log Policy Filter Settings. This enables filtering of access logs from stackdriver.
     accessLogPolicy:
@@ -175,6 +173,9 @@ telemetry:
       logWindowDuration: "43200s"
 # Revision is set as 'version' label and part of the resource names when installing multiple control planes.
 revision: ""
+
+# Revision tags are aliases to Istio control plane revisions
+revisionTags: []
 
 # For Helm compatibility.
 ownerName: ""
@@ -196,6 +197,10 @@ meshConfig:
   # is processed as if it were declared in the leaf namespace.
 
   rootNamespace:
+
+  # The trust domain corresponds to the trust root of a system
+  # Refer to https://github.com/spiffe/spiffe/blob/master/standards/SPIFFE-ID.md#21-trust-domain
+  trustDomain: "cluster.local"
 
   # TODO: the intent is to eventually have this enabled by default when security is used.
   # It is not clear if user should normally need to configure - the metadata is typically
@@ -232,7 +237,7 @@ global:
   # Dev builds from prow are on gcr.io
   hub: docker.io/istio
   # Default tag for Istio images.
-  tag: 1.9.3
+  tag: 1.10.2
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
@@ -505,8 +510,6 @@ global:
   # Use the Mesh Control Protocol (MCP) for configuring Istiod. Requires an MCP source.
   useMCP: false
 
-  # Deprecated, use meshConfig.trustDomain
-  trustDomain: ""
 base:
   # For istioctl usage to disable istio config crds in base
   enableIstioConfigCRDs: true
