Feat: add workergroup toleration to efs driver

--- a/charts/kubezero-aws-efs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/values.yaml
@@ -36,6 +36,9 @@ aws-efs-csi-driver:
           - matchExpressions:
             - key: node.kubernetes.io/csi.efs.fs
               operator: Exists
+    tolerations:
+    - key: kubezero-workergroup
+      effect: NoSchedule
 
   storageClasses:
   - name: efs-sc
