Feat: add workergroup toleration to fluent-bit

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -224,6 +224,8 @@ fluent-bit:
   tolerations:
   - key: node-role.kubernetes.io/master
     effect: NoSchedule
+  - key: kubezero-workergroup
+    effect: NoSchedule
 
   resources:
     requests:
