fix: fix toleration

--- a/charts/kubezero-kiam/values.yaml
+++ b/charts/kubezero-kiam/values.yaml
@@ -67,6 +67,7 @@ kiam:
       effect: NoSchedule
     - key: kubezero-workergroup
       effect: NoSchedule
+      operator: Exists
     priorityClassName: system-node-critical
     prometheus:
       servicemonitor:
