fix: fix toleration

--- a/charts/kubezero-aws-efs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/values.yaml
@@ -39,6 +39,7 @@ aws-efs-csi-driver:
     tolerations:
     - key: kubezero-workergroup
       effect: NoSchedule
+      operator: Exists
 
   storageClasses:
   - name: efs-sc
