--- a/charts/kubezero-aws-ebs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/values.yaml
@@ -33,6 +33,7 @@ aws-ebs-csi-driver:
     tolerations:
     - key: kubezero-workergroup
       effect: NoSchedule
+      operator: Exists
 
   storageClasses:
   - name: ebs-sc-gp2-xfs
