feat: introduce storage module with openEBS LVM as first member

--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -26,6 +26,10 @@ aws-node-termination-handler:
 timecapsule:
   enabled: false
 
+storage:
+  enabled: false
+  crds: true
+
 local-volume-provisioner:
   enabled: false
 
