feat: relase metrics update to fix new apiserver metrics in 1.20 amongst others

--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/values.yaml
@@ -1562,7 +1562,7 @@ prometheusOperator:
   ##
   image:
     repository: quay.io/prometheus-operator/prometheus-operator
-    tag: v0.48.1
+    tag: v0.49.0
     sha: ""
     pullPolicy: IfNotPresent
 
@@ -1578,7 +1578,7 @@ prometheusOperator:
   ##
   prometheusConfigReloaderImage:
     repository: quay.io/prometheus-operator/prometheus-config-reloader
-    tag: v0.48.1
+    tag: v0.49.0
     sha: ""
 
   ## Set the prometheus config reloader side-car CPU limit
@@ -1649,6 +1649,8 @@ prometheus:
     portName: grpc
     port: 10901
     targetPort: "grpc"
+    loadBalancerIP: ""
+    loadBalancerSourceRanges: []
 
     ## Service type
     ##
@@ -1928,7 +1930,7 @@ prometheus:
     ##
     image:
       repository: quay.io/prometheus/prometheus
-      tag: v2.27.1
+      tag: v2.28.1
       sha: ""
 
     ## Tolerations for use with node taints
