--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -217,7 +217,8 @@ fluent-bit:
   enabled: false
 
   image:
-    tag: 1.8.1
+    repository: public.ecr.aws/zero-downtime/fluent-bit
+    tag: v1.8.2-rc1
 
   serviceMonitor:
     enabled: false
@@ -268,13 +269,13 @@ fluent-bit:
       [INPUT]
           Name tail
           Path /var/log/containers/*.log
-          Parser cri-log
-          #multiline.parser cri
+          multiline.parser docker,cri
           Tag cri.*
           Skip_Long_Lines On
           DB /var/log/flb_kube.db
           DB.Sync Normal
           DB.locking true
+          # Buffer_Max_Size 1M
           {{- with .Values.config.input }}
           Mem_Buf_Limit {{ default "4MB" .memBufLimit }}
           Refresh_Interval {{ default 10 .refreshInterval }}
@@ -282,10 +283,10 @@ fluent-bit:
 
     filters: |
       [FILTER]
-          Name    lua
-          Match   cri.*
-          script  /fluent-bit/scripts/kubezero.lua
-          call    reassemble_cri_logs
+          Name parser
+          Match cri.*
+          Parser cri-log
+          Key_Name log
 
       [FILTER]
           Name kubernetes
@@ -314,7 +315,7 @@ fluent-bit:
           Name rewrite_tag
           Match cri.*
           Emitter_Name kube_tag_rewriter
-          Rule logtag F kube.$kubernetes['namespace_name'].$kubernetes['container_name'] false
+          Rule $kubernetes['pod_id'] .* kube.$kubernetes['namespace_name'].$kubernetes['container_name'] false
 
       [FILTER]
           Name    lua
@@ -343,19 +344,6 @@ fluent-bit:
 
   luaScripts:
     kubezero.lua: |
-      local reassemble_state = {}
-
-      function reassemble_cri_logs(tag, timestamp, record)
-         local reassemble_key = tag
-         if record.logtag == 'P' then
-            reassemble_state[reassemble_key] = reassemble_state[reassemble_key] or "" .. record.log
-            return -1, 0, 0
-         end
-         record.log = reassemble_state[reassemble_key] or "" .. (record.log or "")
-         reassemble_state[reassemble_key] = nil
-         return 1, timestamp, record
-      end
-
       function nest_k8s_ns(tag, timestamp, record)
           if not record['kubernetes']['namespace_name'] then
               return 0, 0, 0
