--- a/charts/kubezero-mq/templates/rabbitmq/server-certificate.yaml
+++ b/charts/kubezero-mq/templates/rabbitmq/server-certificate.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.rabbitmq.auth.tls.enabled }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: rabbitmq-server-certificate
