--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -218,7 +218,7 @@ fluent-bit:
 
   image:
     #repository: public.ecr.aws/zero-downtime/fluent-bit
-    tag: v1.8.2
+    tag: 1.8.2
 
   serviceMonitor:
     enabled: false
